# alfred

./: .gitignore  Dockerfile  README.md  embed.py  prompts.MD  pyproject.toml  requirements.txt
assistant/: Dockerfile  __init__.py  chat.py  gmail.py  main.py  prompt.sys.MD  prompt_template.py  requirements.txt  router.py  stock-broker.py  stockbroker.py  travel-assistant.py  travelassistant.py
assistant/prompts/: llama_prompt.MD  trader_prompt.MD
assistant/tools/: alphavantage_retreaver.py  avtool.py  code_interpreter.py  date_time_retriever.py  email_retriever.py  exchange_rate.py  financial_data.py  flight_assistant.py  functions.json
assistant/utils/: base_agent.py  common.py
assistant/web/: chat.py
deployments/: ollama.yml
pipelines/: alfred.py  requirements.txt
pipelines/alfred/: valves.json
src/alfred/: chat.py  embed.py  stockbroker.py  travelassistant.py
src/alfred/prompts/: flightassistant_prompt.MD  prompt.sys.MD
src/alfred/tools/: alphavantage_retreaver.py  date_time_retriever.py  financial_data.py  functions.json  gmail_reader.py
src/alfred/utils/: alphavantage.py  base_agent.py  common.py  semantic_search.py  trader_agent_workflow.py
tests/: test_semantic_search.py
tools/: current_date.py  email_reader.py  gmail.py  test.py
