[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
assistant = "assistant.main:cli"

[project]
name = "assistant"
version = "0.2.0"
description = "Alfred - personal assistant!"
readme = "README.md"
dependencies = [
"llama-index-core>=0.10.39.post1",
"llama-index-readers-file>=0.1.23",
"llama-index-llms-ollama>=0.1.5",
"llama-index-embeddings-huggingface>=0.2.0",
"transformers>=4.41.1",
"google-api-python-client>=2.130.0",
"google-auth-httplib2>=0.2.0",
"google-auth-oauthlib>=1.2.0",
"beautifulsoup4>=4.12.3",
"llama-index>=0.10.39",
"pymilvus>=2.4.3",
"llama-index-vector-stores-milvus>=0.1.22",
"click>=8.1.7",
"setuptools>=72.2.0"]
authors = [
    { name = "Elie Khoury", email = "elie.kh@gmail.com" },
]

[tool.setuptools]
include-package-data = true
py-modules=["assistant"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

